Värimaailman muutos yhdistämällä leiskakoe-branch masteriin

--- a/tyyli.css
+++ b/tyyli.css
@@ -1,8 +1,9 @@
 body {
-    background-color: #aaa;
-  }
-  
-  h2 {
-    background-color: red;
-    color: white;
-  }
+  background-color: blue;
+  color: yellow;
+}
+
+h2 {
+  background-color: red;
+  color: white;
+}
